--- a/DemoPP812.WebAPP/appsettings.json
+++ b/DemoPP812.WebAPP/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnStr": "Server=localhost;Database=DemoASPPA812;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
